# rechnung

./: .gitignore  Makefile  README.md  README.rst  design.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: pythonapp.yml  rechnung_checks_and_tests.yml
docs/: conf.py  design.rst  index.rst  installation.rst  modules.rst  quickstart.rst  readme.rst  rechnung.rst  rechnung.tests.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
rechnung/: cli.py  config.py  contract.py  convert_customers.py  helpers.py  initialize.py  invoice.py  payment.py  settings.py  transactions.py
rechnung/assets/: invoice.css  policy.md
rechnung/orig/: contract_mail_template.j2  contract_template.j2.html  invoice.css  invoice_template.j2.html  sample.config.yaml  sample.contract.yaml  sample.customer.yaml  sample.positions.yaml
rechnung/templates/: contract_reminder_template.j2  invoice_template.j2.html  sample.config.yaml
rechnung/tests/: conftest.py  test_billed_items.py  test_cli.py
rechnung/tests/fixtures/: assets  settings.yaml
rechnung/tests/fixtures/assets/: contract.css  contract_template.j2.html  invoice_mail_template.j2  invoice_template.j2.html
rechnung/tests/fixtures/bank_statements/: postbank.csv
rechnung/tests/golden_masters/: billed_items_1000.yaml  billed_items_1002.yaml
(+7 files in other folders)
